--- a/.github/workflows/gcc.yml
+++ b/.github/workflows/gcc.yml
@@ -4,18 +4,24 @@ on: [push, pull_request]
 
 jobs:
   test:
-    name: "Test"
+    name: ${{ matrix.config.name }}
     runs-on: "ubuntu-latest"
     env:
       cc: gcc
       cxx: g++
+    strategy:
+      fail-fast: false
+      matrix:
+        config:
+          - { name: Address sanitize, sanitizer: address }
+          - { name: Thread sanitizer, sanitizer: thread }
     steps:
       - uses: actions/checkout@v2
       - name: Configure
         run: |
           mkdir build
-          cmake -S test -B build
+          cmake -DCMAKE_CXX_FLAGS_DEBUG="-fsanitize=${{ matrix.config.sanitizer }}" -DCMAKE_LINKER_FLAGS_DEBUG="-fsanitize=${{ matrix.config.sanitizer }}" -S test -B build
       - name: Build
-        run: cmake --build build --config Release
+        run: cmake --build build --config Debug
       - name: Run
         run: ./build/CppUtilTest
