Add UB sanitizer

--- a/.github/workflows/gcc.yml
+++ b/.github/workflows/gcc.yml
@@ -15,6 +15,7 @@ jobs:
         config:
           - { name: Address sanitize, sanitizer: address }
           - { name: Thread sanitizer, sanitizer: thread }
+          - { name: Undefined behaiver sanitizer, sanitizer: undefined }
     steps:
       - uses: actions/checkout@v2
       - name: Configure
