--- a/.github/workflows/gcc.yml
+++ b/.github/workflows/gcc.yml
@@ -18,6 +18,11 @@ jobs:
           - { name: Undefined behaiver sanitizer, sanitizer: undefined }
     steps:
       - uses: actions/checkout@v2
+      - name: Install gcc
+        run: |
+          sudo apt update
+          sudo apt-get purge gcc
+          sudo apt install gcc-11 g++-11
       - name: Configure
         run: |
           mkdir build
